Fixed d3 tick alignment and format

--- a/web/css/style.less
+++ b/web/css/style.less
@@ -748,7 +748,7 @@ path.candle.down {
     stroke: #FF0000;
 }
  
-.bar {
+.bar.vol {
   fill: steelblue;
 }
 
